# CompilerHW

./: .gitignore  CMakeLists.txt  debug.gdb  lab3_log.txt  run.sh  tmp.cpp
generator/: CMakeLists.txt  lab3_log.txt  main.cc
generator/TangZ_lib/: ast.cc  ast.h
lexer/: lexer.l
parser/: CMakeLists.txt  parser.y  parser_bbak.y  parser_old.y  reference.y
parser/TangZ_lib/: asg.h  asg_Node.cc  asg_Node.h  asg_reference.h  ttest.cc  ttest.h
parser/grammar_test/: test.sh
parser/test/: parser.output  parser.tab.c  parser.y  referenct.tab.c  referenct.tab.h  test.sh
tmp/: clang_out.txt  clangout.json  my_out.txt  myout.json  rules.txt  tmp.c
tmp/test/: a.out  tmp.cpp
z_hardTest/: 0_mytest.sysu.c
